Added the references from Overleaf and started on the introduction.

--- a/main.tex
+++ b/main.tex
@@ -27,12 +27,9 @@
 \date{\today}
 
 \begin{document}
-\nocite{*}
 
 \maketitle
 \newpage
-
-\addtocontents{toc}{\setcounter{tocdepth}{2}}
 \tableofcontents
 \newpage
 \listoffigures
@@ -40,6 +37,21 @@
 \listoftables
 \newpage
 
-\setlength{\parskip}{0.2em}
+\section{Introduction}
+The development in satellite technology in the recent decades has led to higher quality data of the earth. 
+The satellites now in orbit can identify the car you are driving, what color drink you are drinking, how high your house is. 
+This technology is also used in civil engineering to determine ground moisture levels\cite{Karthikeyan2017FourComparisons} and bathymetry\cite{Paloscia2013SoilValidation}. 
+Different satellites and algorithms to make sense of the data, have an influence on the accuracy of the measurements.
 
+In the Netherlands, measurements of all types of characteristics of water have a long history. 
+This means that satellites do not have the added value they might have in different countries. 
+The value of the quality of the measurements in the Netherlands can however, be in the validation of the satellite measurements.
+Advances in satellite bathymetry for instance, can be validated with the extensive measurements of all the waterways in the Netherlands.
+
+
+
+\section{Research design}
+\section{Planning}
+
+\bibliography{references}
 \end{document}
