--- a/references.bib
+++ b/references.bib
@@ -1,112 +1,8 @@
-@misc{ThinkstepAG2018,
-    title = {{GaBi ts}},
+@article{Sijabat2018NoTitle,
+    title = {{@仙台No Title}},
     year = {2018},
-    author = {{thinkstep AG}},
-    address = {Leinfelden-Echterdingen}
-}
-
-@misc{KnaufExeedInsulationLLC2018,
-    title = {{Glasswool or Rockwool | Knauf Insulation}},
-    year = {2018},
-    author = {{Knauf Exeed Insulation LLC}},
-    url = {http://www.knaufexeedinsulation.ae/glasswool-or-rockwool}
-}
-
-@misc{GlassRockDensity,
-    title = {{Knauf insulation, densities}},
-    year = {2123},
-    booktitle = {publication},
-    author = {{Knauf}},
-    editor = {{editor}},
-    pages = {pages},
-    url = {http://www.knaufinsulation.rs/en/comparative-characteristics-stone-and-glass-mineral-wool}
-}
-
-@inproceedings{Bhochhibhoya2017,
-    title = {{Lecture 1, Module 6}},
-    year = {2017},
-    booktitle = {Environmental impact of materials},
-    author = {Bhochhibhoya, Silu},
-    pages = {39},
-    address = {Enschede}
-}
-
-@misc{DorendaandGordon2017,
-    title = {{Lots of Locks}},
-    year = {2017},
-    author = {{Dorenda and Gordon}},
-    url = {https://www.hotelboatkailani.com/3993/3993/}
-}
-
-@misc{PanelenHolland,
-    title = {{Panelen Holland insulation info}},
-    year = {2017},
-    author = {Holland, Panelen},
-    editor = {{editor}},
-    url = {http://www.panelenholland.nl/uploads/images/system/informatiebladen/en/nr_08_eng_insulation.pdf}
-}
-
-@techreport{Rijksoverheid2015,
-    title = {{Rapport werkgroep discontovoet 2015}},
-    year = {2015},
-    booktitle = {rijksoverheid.nl},
-    author = {{Rijksoverheid}},
-    url = {http://www.mkba-informatie.nl/index.php/download_file/force/318/667/},
-    institution = {Rijksoverheid}
-}
-
-@misc{RockwoolCalc,
-    title = {{RockWool Rekenhulp}},
-    year = {2017},
-    author = {{RockWool}},
-    editor = {{editor}},
-    url = {http://www.rockwool.nl/support-en-contact/tools/rockwool-rekenhulp/}
-}
-
-@misc{Stybynex,
-    title = {{Stybynex building materials}},
-    year = {2017},
-    author = {{Stybynex}},
-    editor = {{editor}},
-    url = {http://stybenex.nl/}
-}
-
-@misc{sustainablesteel,
-    title = {{Sustainable steel}},
-    year = {2014},
-    author = {met staal, Bouwen}
-}
-
-@article{Kramer2008AFlows,
-    title = {{A conservative unstructured scheme for rapidly varied flows}},
-    year = {2008},
-    journal = {International Journal for Numerical Methods in Fluids},
-    author = {Kramer, Stephan C. and Stelling, Guus S.},
-    number = {2},
-    month = {9},
-    pages = {183--212},
-    volume = {58},
-    publisher = {Wiley-Blackwell},
-    url = {http://doi.wiley.com/10.1002/fld.1722},
-    doi = {10.1002/fld.1722},
-    issn = {02712091},
-    keywords = {advection, conservation properties, flooding and drying, hybrid mesh, inundation, locally implicit, momentum conservation, rapidly varied flow, unstructured mesh}
-}
-
-@article{Volp2013AData,
-    title = {{A finite volume approach for shallow water flow accounting for high-resolution bathymetry and roughness data}},
-    year = {2013},
-    journal = {Water Resources Research},
-    author = {Volp, N. D. and van Prooijen, B. C. and Stelling, G. S.},
-    number = {7},
-    month = {7},
-    pages = {4126--4135},
-    volume = {49},
-    publisher = {Wiley-Blackwell},
-    url = {http://doi.wiley.com/10.1002/wrcr.20324},
-    doi = {10.1002/wrcr.20324},
-    issn = {00431397},
-    keywords = {computational fluid dynamics, effective depth, friction depth, salt marsh, shallow water equations, subgrid}
+    author = {Sijabat, Theresia Wulan Sari},
+    url = {http://www.nhi.nu/nl/files/8214/2675/0543/NHI_LHM_Programma_van_Wensen_2015-2018_website_versie.pdf}
 }
 
 @article{Saylam2017AssessmentSlope,
@@ -121,27 +17,6 @@
     url = {https://www.sciencedirect.com/science/article/pii/S0303243417300387},
     doi = {10.1016/J.JAG.2017.02.012},
     issn = {0303-2434}
-}
-
-@misc{TwentseStaalhandelBalkstaalStaalhandel,
-    title = {{Balkstaal twentse staalhandel}},
-    author = {{Twentse Staalhandel}},
-    url = {http://www.twentsestaalhandel.nl/balkstaal.html}
-}
-
-@techreport{W.R.deSitter1982BerekeningIenW,
-    title = {{Berekening van de levensduur van gewapend beton met het oog op corrosie van de wapening - Publicatiedatabank IenW}},
-    year = {1982},
-    author = {{W.R. de Sitter}},
-    url = {http://publicaties.minienm.nl/documenten/berekening-van-de-levensduur-van-gewapend-beton-met-het-oog-op-corrosie-van-de-wapening},
-    institution = {Hollandsche Beton Groep},
-    address = {Rijswijk}
-}
-
-@misc{SierbetonOnline.nlBetonWebshop,
-    title = {{Beton en prefab producten online bestellen | {\#}1 Webshop}},
-    author = {{SierbetonOnline.nl}},
-    url = {https://www.sierbetononline.nl/}
 }
 
 @article{RogiervanderVeldeHarm-JanBenningaMichielPezijDenieAugustijnUniversiteitTwenteColeenCarranzaMartinevanderPloegWageningenUniversiteit2018BodemvochtErmee,
@@ -166,27 +41,6 @@
     issn = {0034-4257}
 }
 
-@misc{DownloadsTerneuzen,
-    title = {{Downloads | Nieuwe Sluis Terneuzen}},
-    url = {https://nieuwesluisterneuzen.eu/downloads}
-}
-
-@article{McCord2014EffectArea,
-    title = {{Effect of public green space on residential property values in Belfast metropolitan area}},
-    year = {2014},
-    journal = {Journal of Financial Management of Property and Construction},
-    author = {McCord, J. and McCord, M. and McCluskey, W. and Davis, P.T. and McIlhatton, D. and Haran, M.},
-    number = {2},
-    month = {7},
-    pages = {117--137},
-    volume = {19},
-    publisher = { Emerald Group Publishing Limited },
-    url = {http://www.emeraldinsight.com/doi/10.1108/JFMPC-04-2013-0008},
-    doi = {10.1108/JFMPC-04-2013-0008},
-    issn = {1366-4387},
-    keywords = {Hedonic model, House price, Property value, Public green open space}
-}
-
 @article{Karthikeyan2017FourComparisons,
     title = {{Four decades of microwave satellite soil moisture observations: Part 2. Product validation and inter-satellite comparisons}},
     year = {2017},
@@ -199,43 +53,6 @@
     url = {https://www.sciencedirect.com/science/article/pii/S0309170817301860},
     doi = {10.1016/J.ADVWATRES.2017.09.010},
     issn = {0309-1708}
-}
-
-@article{Brugnano2008IterativeSystems,
-    title = {{Iterative Solution of Piecewise Linear Systems}},
-    year = {2008},
-    journal = {SIAM Journal on Scientific Computing},
-    author = {Brugnano, Luigi and Casulli, Vincenzo},
-    number = {1},
-    month = {1},
-    pages = {463--472},
-    volume = {30},
-    publisher = {Society for Industrial and Applied Mathematics},
-    url = {http://epubs.siam.org/doi/10.1137/070681867},
-    doi = {10.1137/070681867},
-    issn = {1064-8275},
-    keywords = {76M20, 90C06, 90C33, 90C53, Newton-type methods, free-surface hydrodynamics, linear complementarity problems, piecewise linear systems, wetting and drying}
-}
-
-@misc{VoordeelHoutKoopPalen,
-    title = {{Koop goedkope planken, balken, dekdelen, palen}},
-    author = {{Voordeel Hout}},
-    url = {https://www.voordeelhout.nl/producten?houtsoort=9}
-}
-
-@misc{Koning2018LectureAnalysis.,
-    title = {{Lecture 1: Value of space and spatial features. Introduction to hedonic analysis.}},
-    year = {2018},
-    author = {Koning, Koen de},
-    address = {Enschede}
-}
-
-@book{Alonso1964LocationRent,
-    title = {{Location and Land Use : Toward a General Theory of Land Rent}},
-    year = {1964},
-    author = {Alonso, William},
-    pages = {204},
-    isbn = {9780674730854}
 }
 
 @article{Niroumand-Jadidi2018MultipleImagery,
@@ -252,6 +69,13 @@
     issn = {0034-4257}
 }
 
+@misc{NHI2019NHIPortaal,
+    title = {{NHI data portaal}},
+    year = {2019},
+    author = {{NHI}},
+    url = {https://data.nhi.nu/}
+}
+
 @article{Santi2018OnMoisture,
     title = {{On the synergy of SMAP, AMSR2 AND SENTINEL-1 for retrieving soil moisture}},
     year = {2018},
@@ -266,25 +90,12 @@
     issn = {0303-2434}
 }
 
-@techreport{HKVLijninWaterJ.M.vanNoortwijk2004OptimalisatieIenW,
-    title = {{Optimalisatie van levensduur verlengend onderhoud voor conserveringen op staal - Publicatiedatabank IenW}},
-    year = {2004},
-    author = {HKV Lijn in Water, J.M. van Noortwijk, Anne Barendregt},
-    url = {http://publicaties.minienm.nl/documenten/optimalisatie-van-levensduur-verlengend-onderhoud-voor-conserver},
-    institution = {RWS, Bouwdienst},
-    address = {Utrecht}
-}
-
-@misc{HouthandelhetAnkerPrijslijstenAnker,
-    title = {{Prijslijsten - Houthandel het Anker}},
-    author = {{Houthandel het Anker}},
-    url = {https://www.hetanker.tv/assortiment/prijslijsten.aspx}
-}
-
-@misc{LiviosRichtprijzenLivios,
-    title = {{Richtprijzen fundering en beton - Fundering - Livios}},
-    author = {{Livios}},
-    url = {https://www.livios.be/nl/bouwinformatie/ruwbouw/beton/fundering/richtprijzen-fundering-en-beton/}
+@misc{Kroon2016Overzicht,
+    title = {{Overzicht}},
+    year = {2016},
+    author = {Kroon, Timo},
+    publisher = {NHI},
+    url = {http://www.nhi.nu/nl/files/2014/9398/5484/NHI_symposium_30_juni_2016_-_Timo.pdf}
 }
 
 @article{Hodul2018SatelliteBathymetry,
@@ -299,17 +110,6 @@
     url = {https://www.sciencedirect.com/science/article/pii/S0924271618301783},
     doi = {10.1016/J.ISPRSJPRS.2018.06.015},
     issn = {0924-2716}
-}
-
-@article{Balzano2009Semi-implicitTransitions,
-    title = {{Semi-implicit modeling of 2D rapidly varied flows with transitions}},
-    year = {2009},
-    journal = {Journal of Hydraulic Research},
-    author = {Balzano, Andrea and Torricelli, Elisabetta},
-    isbn = {0022-1686},
-    doi = {10.3826/jhr.2009.3250},
-    issn = {00221686},
-    keywords = {Dam break, Flood flow, Numerical model, Shallow water equations, Supercritical flow}
 }
 
 @article{Paloscia2013SoilValidation,
@@ -342,21 +142,6 @@
     keywords = {CLM simulations, Soil Moisture Active Passive, evaluation, in situ observations}
 }
 
-@article{Wu2003TheStructure,
-    title = {{The influence of public open space on urban spatial structure}},
-    year = {2003},
-    journal = {Journal of Environmental Economics and Management},
-    author = {Wu, JunJie and Plantinga, Andrew J.},
-    number = {2},
-    month = {9},
-    pages = {288--309},
-    volume = {46},
-    publisher = {Academic Press},
-    url = {https://www.sciencedirect.com/science/article/pii/S0095069603000238},
-    doi = {10.1016/S0095-0696(03)00023-8},
-    issn = {0095-0696}
-}
-
 @article{Benninga2018TheNetherlands,
     title = {{The Raam regional soil moisture monitoring network in the Netherlands}},
     year = {2018},
@@ -373,31 +158,22 @@
     keywords = {ITC-GOLD, ITC-ISI-JOURNAL-ARTICLE}
 }
 
-@article{Monson2009ValuationModels,
-    title = {{Valuation Using Hedonic Pricing Models}},
-    year = {2009},
-    journal = {Cornell Real Estate Review},
-    author = {Monson, Matt},
-    number = {1},
-    month = {7},
-    volume = {7},
-    url = {https://scholarship.sha.cornell.edu/crer/vol7/iss1/10}
+@misc{UnitsML_Guidelines_DraftVersion_0.4.2.docx,
+    title = {{UnitsML{\_}Guidelines{\_}DraftVersion{\_}0.4.2.docx}},
+    url = {https://universiteittwente-my.sharepoint.com/:w:/r/personal/s0125997_utwente_nl/_layouts/15/Doc.aspx?sourcedoc={97917dc5-9814-430b-98b1-7b31719f6ee3}&action=view}
 }
 
-@techreport{MinisterievanVerkeerenWaterstaat2004VerdelingInfrastructuurprojecten,
-    title = {{Verdeling van Effecten Infrastructuurprojecten}},
-    year = {2004},
-    author = {{Ministerie van Verkeer en Waterstaat}}
+@misc{UnitsML_Guidelines_DraftVersion_0.4.2.docxb,
+    title = {{UnitsML{\_}Guidelines{\_}DraftVersion{\_}0.4.2.docx}},
+    url = {https://universiteittwente-my.sharepoint.com/:w:/r/personal/s0125997_utwente_nl/_layouts/15/Doc.aspx?sourcedoc={97917dc5-9814-430b-98b1-7b31719f6ee3}&action=view}
 }
 
-@article{Visser2008WINDOWNETHERLANDS,
-    title = {{WINDOW ON THE NETHERLANDS RESIDENTIAL ENVIRONMENT AND SPATIAL VARIATION IN HOUSE PRICES IN THE NETHERLANDS}},
-    year = {2008},
-    journal = {Tijdschrift voor Economische en Sociale Geografie},
-    author = {Visser, Petra and Van Dam, Frank and Hooimeijer, Pieter},
-    number = {3},
-    pages = {348--360},
-    volume = {99},
-    url = {https://onlinelibrary-wiley-com.ezproxy2.utwente.nl/doi/pdf/10.1111/j.1467-9663.2008.00472.x},
-    keywords = {House prices, hedonic pricing, housing market, residential environment}
+@misc{XSDStandaardisatie,
+    title = {{XSD | Forum Standaardisatie}},
+    url = {https://www.forumstandaardisatie.nl/standaard/xsd}
+}
+
+@misc{XSDStandaardisatieb,
+    title = {{XSD | Forum Standaardisatie}},
+    url = {https://www.forumstandaardisatie.nl/standaard/xsd}
 }
